Parametrize certificates on CRD

--- a/roles/passgen/defaults/main.yml
+++ b/roles/passgen/defaults/main.yml
@@ -1,6 +1,66 @@
 ---
 # defaults file for Passgen
+# Number of replicas
 size: 1
+
+# Image configuration
 image_name: quay.io/gbsalinetti/passgen
 image_tag: latest
+
+# Custom route
 hostname: ""
+
+# Application Certificates (mounted as secrets)
+tls_cert: |
+  -----BEGIN CERTIFICATE-----
+  MIIDZTCCAk2gAwIBAgIUJzVfEnqL+02dpLzWD+b8l9zWUf4wDQYJKoZIhvcNAQEL
+  BQAwQjELMAkGA1UEBhMCWFgxFTATBgNVBAcMDERlZmF1bHQgQ2l0eTEcMBoGA1UE
+  CgwTRGVmYXVsdCBDb21wYW55IEx0ZDAeFw0xOTAxMjUxNDQwMTBaFw0yMDAxMjUx
+  NDQwMTBaMEIxCzAJBgNVBAYTAlhYMRUwEwYDVQQHDAxEZWZhdWx0IENpdHkxHDAa
+  BgNVBAoME0RlZmF1bHQgQ29tcGFueSBMdGQwggEiMA0GCSqGSIb3DQEBAQUAA4IB
+  DwAwggEKAoIBAQDQrj+FThoqvweV0BYHFk9vVl6BfKY4+23v/ranbUIdl7+7rwq1
+  2MONKe2v5Ul/20T6DeUTvEEjbaODZZiL/jk252x8tAIpBnHkLPtm5TQHtwIc2Cq6
+  vLSkEW4SFd5zC3+PLXR11f5iKQ4q5uMCY+DIyREMEHUqydozQ7wu69cwR0Jwp5UH
+  qB9zq/KZt3NOUP7aZbAz3a17AvY/ymbPekFvnRZQDRoVob7cSpJE3HhCw10iZl7d
+  q7T6qzxv6IaGNnweCJw4X3c0yRglLoVZupYjTNu34ul9grzBnPou+Hhh/94V9DUp
+  F99CE/dlyZ27qmmTGUHKTxwyxqlJbLbLansnAgMBAAGjUzBRMB0GA1UdDgQWBBTc
+  8Q77N4zoCCTt+hjICh0ppl9OIDAfBgNVHSMEGDAWgBTc8Q77N4zoCCTt+hjICh0p
+  pl9OIDAPBgNVHRMBAf8EBTADAQH/MA0GCSqGSIb3DQEBCwUAA4IBAQCr+L/gUdP4
+  148At7ZBXFknXun/nIftl8yJVB6JxDZ5qR2N/ChorBVFt8UiSM0epuleUcuDmeMv
+  P/infpG/FTF+3GOl48n7i93w1LhOqS0zPVfvjWCKP8gw0TkLepGlVyi/oDqt8e8a
+  xEgq/Udu80xw5jkYvwXSs/W6iciQTxoVuY3UlCuds3K/Mc2HCdxjjBO4ObJX9YnG
+  E/YdcJh/NGlAh7/ry8R01LU/1C3cKGaF0cY10iRFRNAn3/+VHTIDuxOf21EzRGLA
+  K9O1Pdtw7OoTKtOqHPlEg5U6fDmktyDwUsebLuTBRG5FVwBhX3b1SlmXbCXKWplF
+  WbwC4yJGvnBy
+  -----END CERTIFICATE-----
+
+tls_key: |
+  -----BEGIN PRIVATE KEY-----
+  MIIEvQIBADANBgkqhkiG9w0BAQEFAASCBKcwggSjAgEAAoIBAQDQrj+FThoqvweV
+  0BYHFk9vVl6BfKY4+23v/ranbUIdl7+7rwq12MONKe2v5Ul/20T6DeUTvEEjbaOD
+  ZZiL/jk252x8tAIpBnHkLPtm5TQHtwIc2Cq6vLSkEW4SFd5zC3+PLXR11f5iKQ4q
+  5uMCY+DIyREMEHUqydozQ7wu69cwR0Jwp5UHqB9zq/KZt3NOUP7aZbAz3a17AvY/
+  ymbPekFvnRZQDRoVob7cSpJE3HhCw10iZl7dq7T6qzxv6IaGNnweCJw4X3c0yRgl
+  LoVZupYjTNu34ul9grzBnPou+Hhh/94V9DUpF99CE/dlyZ27qmmTGUHKTxwyxqlJ
+  bLbLansnAgMBAAECggEBAIcgXedvBIirfDjpLmpWawd4UOfeFDCPtseSEyplGEvb
+  SH86wF+yRiYxgUTF3wsYrBiTSMO3wiIzy465CceUze2ce2ZglYmFL9iFvCELx947
+  BfYxj7GtofcfhjvVx16NkoLe9yuabweW+CKVsWeJzzOU5yH9wjD71fweH0vu0T/j
+  qSXNBvcHOab0RvVgEoQYFQUJgGfl0y/nIHzNqOych9Az1PftlCQOkqzJM+agsTuL
+  iOKodwpfga15wnag5vdsm8P/S0CY+gq9zC9PLk28f/FOSBqMW23iUwDltANUXiRO
+  /Bo2yzvnDiRna0N7JyeQzPe2MmcvXjTfpOkPDDXtZHkCgYEA8YCbEMfDYY//OlFD
+  epX+7/HLYy+/KETqafUKUK7fOvIPR5v0rt8TdQi3ohOiwgOUuWe5m1mwDVDyjXeB
+  m/FjyFVFCeYhgwKP6JSQ26k93LMYs1k1V8/TxosUnVcsdSel17mAKdq/eCeLq27y
+  7GsftCE+q6qbuSeaxA/A8mobyQ0CgYEA3TU9g4TyMjNKqyiQr9ELRcRmEzdxLUDk
+  YgRQdpW/VQ2NGcFCzv4NJyM4sDaBnSBMHh7wPqnVX2A/0sI1ylLg7oZYmKNOEygS
+  WvAPNuLMmKKIAzqbaVTygIMaxv8Ei8yMP6ypYvjEVeDPchojXhejRptnjv27tyKE
+  ncQzbgNroAMCgYBgG58aSXVewTCAI9Dn2wOOt7oKKfk37F0hd6v4Oe+KhMRB6jWw
+  1gPnQmXZ8ViHP2eTdUzvHv0p/3nXhKSmy6S7F/wWmWfivEVK+LzBPhPpXbjJvwm0
+  fXe4/qZgi02c/f9I34C6p1wlVA+IVOoF3gfK5qQLKyU3xSQZPG+7yTBvjQKBgBQ/
+  nlzem4jq1wfp06y0VvLQ8oMJzStWSFGMkYz5UiVH80WLQkFOUgfmGndO1fh7D1ym
+  ellSFH0Bg3YYXvIhOgO7enqmYCwyu9NlLA9bHV1Pa2HYSIeQxg3rclUK3PCrDZ96
+  f5rWqKovxO1t5RTk1wZMjWMyaK9v0nHaltaYK47fAoGAVM5AavC/lUUDTG7QIOVb
+  W+1tlhmhJYyFyXbBDFJNMOo5XiRa7IIFIA9K2BOnbWRXSt85WuRdKHnTKoo9U6YC
+  GMnde3w3a3e1pBuq/VGCY5RPJiEHD2H15x7xG6Dcm+KkIkIbWFqUnDQJg9unvptr
+  akOX1SJC268Be3p7fA65mF4=
+  -----END PRIVATE KEY-----
+
